Add image split and stitch for test images

--- a/research_model.ipynb
+++ b/research_model.ipynb
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr = torch.utils.data.DataLoader(TSegLoader('training/','manual/'), batch_size=4, shuffle=True)"
+    "tr = torch.utils.data.DataLoader(TSegLoader('data/training/','data/manual/'), batch_size=4, shuffle=True"
    ]
   },
   {
@@ -343,8 +343,8 @@
    ],
    "source": [
     "image_id = str(np.random.randint(0,1000))\n",
-    "im = Image.open('training/' + image_id  + '_orig.jpg')\n",
-    "im_noise = Image.open('training/' + image_id  + '_noise.jpg')\n",
+    "im = Image.open('data/training/' + image_id  + '_orig.jpg')\n",
+    "im_noise = Image.open('data/training/' + image_id  + '_noise.jpg')\n",
     "\n",
     "s = data_tranform(im).unsqueeze(0)\n",
     "s = torch.cat((s,data_tranform(im_noise).unsqueeze(0)))\n",
@@ -413,7 +413,7 @@
     }
    ],
    "source": [
-    "im = Image.open('diabetic-retinopathy-header.jpg')\n",
+    "im = Image.open('data/diabetic-retinopathy-header.jpg')\n",
     "im = np.asarray(im)\n",
     "im = im[200:456,400:656]\n",
     "s = data_tranform(im)\n",
@@ -461,7 +461,7 @@
     }
    ],
    "source": [
-    "im = Image.open('diabetic-retinopathy-header.jpg')\n",
+    "im = Image.open('data/diabetic-retinopathy-header.jpg')\n",
     "im = np.asarray(im)\n",
     "im = im[200:456,600:856]\n",
     "s = data_tranform(im)\n",
@@ -514,7 +514,7 @@
     }
    ],
    "source": [
-    "im = Image.open('pigmentosa.jpg')\n",
+    "im = Image.open('data/pigmentosa.jpg')\n",
     "im = np.asarray(im)\n",
     "im = im[260:516,350:606]\n",
     "s = data_tranform(im)\n",
@@ -567,7 +567,7 @@
     }
    ],
    "source": [
-    "im = Image.open('haemorrhage1.jpg')\n",
+    "im = Image.open('data/data/haemorrhage1.jpg')\n",
     "im = np.asarray(im)\n",
     "im = im[0:256,20:276]\n",
     "s = data_tranform(im)\n",
@@ -586,16 +586,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff16e2f2f60>"
+       "<matplotlib.image.AxesImage at 0x7ff16dfcd6d8>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -613,7 +613,7 @@
     }
    ],
    "source": [
-    "im = Image.open('haemorrhage2.png')\n",
+    "im = Image.open('data/haemorrhage2.png')\n",
     "im = np.asarray(im)\n",
     "im = im[0:256,20:276]\n",
     "s = data_tranform(im)\n",
@@ -632,16 +632,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff16e144c50>"
+       "<matplotlib.image.AxesImage at 0x7ff16ded5438>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -659,7 +659,7 @@
     }
    ],
    "source": [
-    "im = Image.open('haemorrhage3.png').convert('RGB')\n",
+    "im = Image.open('data/haemorrhage3.png').convert('RGB')\n",
     "im = np.asarray(im)\n",
     "im = im[100:356,200:456]\n",
     "s = data_tranform(im)\n",
