Add documentation and comments, improve tests and examples

--- a/generate_patches.ipynb
+++ b/generate_patches.ipynb
@@ -15,6 +15,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data generation by splitting image \n",
+    "`random_patch` selects random 256 * 256 patches from the image and generates training examples from that. Moreover to increase the count of distinct examples image flipping and noise addition is used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_patch(image, manual, mask, count):\n",
+    "    # patch without any effects\n",
+    "    x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
+    "    while (mask[x][y]<0.001 and mask[x][y+256]<0.001 and mask[x+256][y]<0.001 and mask[x+256][y+256]<0.001):\n",
+    "        x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
+    "    t_im = image[x:x+256,y:y+256]\n",
+    "    io.imsave(\"data/training/\"+str(count)+\"_orig.jpg\",t_im)\n",
+    "    t_im = manual[x:x+256,y:y+256]\n",
+    "    io.imsave(\"data/manual/\"+str(count)+\"_orig.jpg\",t_im)\n",
+    "    \n",
+    "    # flipped image\n",
+    "    x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
+    "    while (mask[x][y]<0.001 and mask[x][y+256]<0.001 and mask[x+256][y]<0.001 and mask[x+256][y+256]<0.001):\n",
+    "        x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
+    "    t_im = np.flip(image[x:x+256,y:y+256],axis=(0,1))\n",
+    "    io.imsave(\"data/training/\"+str(count)+\"_flip.jpg\",t_im)\n",
+    "    t_im = manual[x:x+256,y:y+256]\n",
+    "    io.imsave(\"data/manual/\"+str(count)+\"_flip.jpg\",t_im)\n",
+    "    \n",
+    "    # noise addition\n",
+    "    x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
+    "    while (mask[x][y]<0.001 and mask[x][y+256]<0.001 and mask[x+256][y]<0.001 and mask[x+256][y+256]<0.001):\n",
+    "        x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
+    "    t_im = np.clip(image[x:x+256,y:y+256] + np.random.randint(20,size=(256,256,3)), 0 , 255)\n",
+    "    io.imsave(\"data/training/\"+str(count)+\"_noise.jpg\",t_im)\n",
+    "    t_im = manual[x:x+256,y:y+256]\n",
+    "    io.imsave(\"data/manual/\"+str(count)+\"_noise.jpg\",t_im)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting up the directory structures for storing training data\n",
+    "!mkdir -p data/training\n",
+    "!mkdir -p data/manual\n",
+    "!rm -rf data/training/*\n",
+    "!rm -rf data/manual/*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To ignore warnings when splitting images\n",
+    "import warnings\n",
+    "warnings.simplefilter('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Patch generation for DRIVE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -57,62 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_patch(image,manual,mask,count):\n",
-    "    # patch without any effects\n",
-    "    x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
-    "    while (mask[x][y]<0.001 and mask[x][y+256]<0.001 and mask[x+256][y]<0.001 and mask[x+256][y+256]<0.001):\n",
-    "        x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
-    "    t_im = image[x:x+256,y:y+256]\n",
-    "    io.imsave(\"data/training/\"+str(count)+\"_orig.jpg\",t_im)\n",
-    "    t_im = manual[x:x+256,y:y+256]\n",
-    "    io.imsave(\"data/manual/\"+str(count)+\"_orig.jpg\",t_im)\n",
-    "    \n",
-    "    # flipped image\n",
-    "    x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
-    "    while (mask[x][y]<0.001 and mask[x][y+256]<0.001 and mask[x+256][y]<0.001 and mask[x+256][y+256]<0.001):\n",
-    "        x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
-    "    t_im = np.flip(image[x:x+256,y:y+256],axis=(0,1))\n",
-    "    io.imsave(\"data/training/\"+str(count)+\"_flip.jpg\",t_im)\n",
-    "    t_im = manual[x:x+256,y:y+256]\n",
-    "    io.imsave(\"data/manual/\"+str(count)+\"_flip.jpg\",t_im)\n",
-    "    \n",
-    "    # noise addition\n",
-    "    x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
-    "    while (mask[x][y]<0.001 and mask[x][y+256]<0.001 and mask[x+256][y]<0.001 and mask[x+256][y+256]<0.001):\n",
-    "        x,y = np.random.randint(0,im.shape[0]-256),np.random.randint(0,im.shape[1]-256)\n",
-    "    t_im = np.clip(image[x:x+256,y:y+256] + np.random.randint(20,size=(256,256,3)), 0 , 255)\n",
-    "    io.imsave(\"data/training/\"+str(count)+\"_noise.jpg\",t_im)\n",
-    "    t_im = manual[x:x+256,y:y+256]\n",
-    "    io.imsave(\"data/manual/\"+str(count)+\"_noise.jpg\",t_im)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir -p data/training\n",
-    "!mkdir -p data/manual\n",
-    "!rm -rf data/training/*\n",
-    "!rm -rf data/manual/*\n",
-    "\n",
-    "import warnings\n",
-    "warnings.simplefilter('ignore')\n",
-    "\n",
     "count=0\n",
     "for image in image_list:\n",
     "    im = io.imread(image_dir+\"images/\"+image)\n",
     "    mask = io.imread(image_dir+\"mask/\"+image[0:2]+\"_training_mask.gif\")\n",
     "    manual = io.imread(image_dir+\"1st_manual/\"+image[0:2]+\"_manual1.gif\")\n",
+    "    \n",
+    "    # For each image generate 32 * 3 patches\n",
     "    for i in range(32):\n",
     "        random_patch(im,manual,mask,count)\n",
     "        count+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Patch generation for STARE"
    ]
   },
   {
@@ -167,9 +207,17 @@
     "    manual = io.imread(image_dir+\"labels-vk/\"+image)\n",
     "    mask = np.ones((im.shape[0],im.shape[1]))\n",
     "    \n",
+    "    # For each image generate 32 * 3 patches\n",
     "    for i in range(32):\n",
     "        random_patch(im,manual,mask,count)\n",
     "        count+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Some examples of the patches generated"
    ]
   },
   {
